# 5h-protocol-branch-2

./: PROTOCOL.md  README.md  docker-compose.yml
commentary/models/claude-anthropic/: 2026-04-11T18-00-00+02-00_claude-branch2-charter.md  2026-04-12T12-00-00+02-00_claude-gemini-review-response.md  2026-04-12T15-00-00+02-00_claude-branch1-integration-plan.md  2026-04-14T12-00-00+02-00_claude-gemini-advisory2-response.md
commentary/models/gemini-google/: 2026-04-12T10-00-00+02-00_gemini-branch2-code-review.md
implementation/python-proxy/: pyproject.toml
implementation/python-proxy/five_h_proxy/: Dockerfile  __init__.py  consent.py  crypto.py  escrow.py  main.py  models.py  proxy.py  rate_limit.py  rate_limit_and_escrow.py  trust_layer.py  verification.py
implementation/python-proxy/tests/: test_15_node.py  test_consent.py  test_trust_layer.py
spec/: threat-model.md
spec/execution/: canonical-serialization.md
spec/schemas/: ai-proxy.json  graph-model.json
spec/test-vectors/: 15-node-graph.json
tests/: test_integration.py  test_verification_semantic.py
